--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -11,7 +11,7 @@ dock_hsplit_1=0
 dock_hsplit_2=280
 dock_hsplit_3=-471
 dock_hsplit_4=0
-dock_9_selected_tab_idx=0
+dock_9_selected_tab_idx=1
 dock_3="Scene,Import"
 dock_4="FileSystem,History"
 dock_5="Inspector,Signals,Groups"
@@ -24,8 +24,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://Scenes/Enemies/Antivirus.tscn")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Virus/", "res://Scenes/Enemies/")
+selected_paths=PackedStringArray("res://Scenes/Environment/Folder.tscn")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Virus/", "res://Scenes/Environment/", "res://Scenes/Enemies/")
 
 [docks/History]
 
@@ -34,8 +34,8 @@ include_global=true
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Main/Main.tscn", "res://Scenes/Virus/Virus.tscn", "res://Scenes/Enemies/Antivirus.tscn")
-current_scene="res://Scenes/Enemies/Antivirus.tscn"
+open_scenes=PackedStringArray("res://Scenes/Main/Main.tscn", "res://Scenes/Environment/Folder.tscn", "res://Scenes/Environment/File.tscn")
+current_scene="res://Scenes/Main/Main.tscn"
 bottom_panel_offsets={
 "Audio": -450,
 "Debugger": 0,
