--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -11,7 +11,6 @@ dock_hsplit_1=0
 dock_hsplit_2=280
 dock_hsplit_3=-471
 dock_hsplit_4=0
-dock_9_selected_tab_idx=1
 dock_3="Scene,Import"
 dock_4="FileSystem,History"
 dock_5="Inspector,Signals,Groups"
@@ -24,8 +23,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://Scenes/Environment/Folder.tscn")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Virus/", "res://Scenes/Environment/", "res://Scenes/Enemies/")
+selected_paths=PackedStringArray("res://Scripts/Core/AudioManager.gd")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Core/", "res://Scenes/", "res://Scenes/Virus/", "res://Scenes/Environment/", "res://Scenes/Enemies/")
 
 [docks/History]
 
@@ -37,12 +36,14 @@ include_global=true
 open_scenes=PackedStringArray("res://Scenes/Main/Main.tscn", "res://Scenes/Environment/Folder.tscn", "res://Scenes/Environment/File.tscn")
 current_scene="res://Scenes/Main/Main.tscn"
 bottom_panel_offsets={
+"Animation": 0,
 "Audio": -450,
 "Debugger": 0,
-"Output": 0
+"Output": -270,
+"Shader Editor": 0
 }
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=3
+selected_main_editor_idx=2
 
 [EditorWindow]
 
@@ -52,8 +53,8 @@ position=Vector2i(4480, 57)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Enemies/Antivirus.gd", "res://README.md"]
-selected_script="res://Scripts/Enemies/Antivirus.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=200
 list_split_offset=0
