--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,17 +1,3 @@
-[res://README.md]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": PackedInt32Array(),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "Markdown"
-}
-
 [res://Scripts/Enemies/Antivirus.gd]
 
 state={
@@ -22,6 +8,20 @@ state={
 "h_scroll_position": 0,
 "row": 38,
 "scroll_position": 38.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Core/AudioManager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 63,
+"folded_lines": PackedInt32Array(),
+"h_scroll_position": 0,
+"row": 33,
+"scroll_position": 54.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
