Add Options Menu with Save
I add a options system with sounds, controls and graphics, i also add a save system for save the options and can be reused for save the game

--- a/.godot/scene_groups_cache.cfg
+++ b/.godot/scene_groups_cache.cfg
@@ -1,3 +1,7 @@
 [res://Scenes/Virus/Virus.tscn]
 
 groups=[&"virus", &"virus_infection_zone"]
+
+[res://Scenes/UI/Options/HotkeyRebindButton.tscn]
+
+groups=[&"HotkeyRebindButton"]
