--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,9 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=280
-dock_hsplit_3=-471
+dock_hsplit_3=-522
 dock_hsplit_4=0
+dock_9_selected_tab_idx=0
 dock_3="Scene,Import"
 dock_4="FileSystem,History"
 dock_5="Inspector,Signals,Groups"
@@ -23,8 +24,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://Scripts/Core/AudioManager.gd")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Core/", "res://Scenes/", "res://Scenes/Virus/", "res://Scenes/Environment/", "res://Scenes/Enemies/")
+selected_paths=PackedStringArray("res://addons/save_and_load/SaveManager.gd")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/UI/", "res://Scenes/", "res://Scenes/Virus/", "res://Scenes/UI/", "res://Scenes/UI/Options/", "res://addons/", "res://addons/save_and_load/")
 
 [docks/History]
 
@@ -33,29 +34,30 @@ include_global=true
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Main/Main.tscn", "res://Scenes/Environment/Folder.tscn", "res://Scenes/Environment/File.tscn")
-current_scene="res://Scenes/Main/Main.tscn"
+open_scenes=PackedStringArray("res://Scenes/UI/Options/Graphics.tscn", "res://Scenes/UI/OptionsMenu.tscn")
+current_scene="res://Scenes/UI/OptionsMenu.tscn"
 bottom_panel_offsets={
 "Animation": 0,
 "Audio": -450,
-"Debugger": 0,
+"Debugger": -286,
 "Output": -270,
 "Shader Editor": 0
 }
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 
 [EditorWindow]
 
 screen=2
 mode="maximized"
 position=Vector2i(4480, 57)
+size=Vector2i(1152, 648)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
-open_help=[]
+open_scripts=["res://Scripts/UI/HotkeyRebindButton.gd"]
+selected_script="res://Scripts/UI/HotkeyRebindButton.gd"
+open_help=["@GlobalScope", "OS"]
 script_split_offset=200
 list_split_offset=0
 zoom_factor=1.0
