--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,5 +1,4 @@
 [selected_history]
 
-Script=PackedStringArray("uid://fqcw2obmxshk", "uid://ciby424h8ww8a", "uid://radfonor80n6")
-Texture2D=PackedStringArray("uid://c02gsg1f7ra7j", "uid://dairor2a0kwo4")
+Script=PackedStringArray("uid://c3ntx28fkvufp", "uid://fqcw2obmxshk", "uid://ciby424h8ww8a", "uid://radfonor80n6")
 PackedScene=PackedStringArray("uid://bsorlsgev2hqs")
