--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -25,3 +25,31 @@ state={
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
+
+[res://Scripts/UI/OptionsMenu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": PackedInt32Array(),
+"h_scroll_position": 0,
+"row": 83,
+"scroll_position": 83.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/UI/HotkeyRebindButton.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": PackedInt32Array(),
+"h_scroll_position": 0,
+"row": 100,
+"scroll_position": 100.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
