--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_closed=[]
 dock_split_2=0
@@ -11,7 +11,7 @@ dock_hsplit_1=0
 dock_hsplit_2=280
 dock_hsplit_3=-522
 dock_hsplit_4=0
-dock_9_selected_tab_idx=1
+dock_9_selected_tab_idx=0
 dock_3="Scene,Import"
 dock_4="FileSystem,History"
 dock_5="Inspector,Signals,Groups"
@@ -24,8 +24,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://addons/save_and_load/SaveManager.gd")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/UI/", "res://Scenes/", "res://Scenes/Virus/", "res://Scenes/UI/", "res://Scenes/UI/Options/", "res://addons/", "res://addons/save_and_load/")
+selected_paths=PackedStringArray("res://Scenes/Enemies/Antivirus.tscn")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/UI/", "res://Scenes/", "res://Scenes/Virus/", "res://Scenes/UI/Options/", "res://Scenes/Enemies/", "res://Assets/", "res://Assets/Sprites/", "res://addons/save_and_load/")
 
 [docks/History]
 
@@ -34,8 +34,8 @@ include_global=true
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/UI/Options/Graphics.tscn", "res://Scenes/UI/OptionsMenu.tscn")
-current_scene="res://Scenes/UI/OptionsMenu.tscn"
+open_scenes=PackedStringArray("res://Scenes/Main/Main.tscn", "res://Scenes/Environment/File.tscn")
+current_scene="res://Scenes/Environment/File.tscn"
 bottom_panel_offsets={
 "Animation": 0,
 "Audio": -450,
@@ -43,20 +43,20 @@ bottom_panel_offsets={
 "Output": -270,
 "Shader Editor": 0
 }
-selected_default_debugger_tab_idx=5
-selected_main_editor_idx=3
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=0
 
 [EditorWindow]
 
-screen=0
+screen=2
 mode="maximized"
-position=Vector2i(2560, 590)
+position=Vector2i(4480, 57)
 size=Vector2i(1152, 648)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/UI/OptionsMenu.gd"]
-selected_script="res://Scripts/UI/OptionsMenu.gd"
+open_scripts=[]
+selected_script=""
 open_help=["@GlobalScope", "OS"]
 script_split_offset=200
 list_split_offset=0
@@ -73,3 +73,13 @@ open_shaders=[]
 split_offset=200
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=false
