--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -2,3 +2,4 @@
 
 Script=PackedStringArray("uid://c3ntx28fkvufp", "uid://fqcw2obmxshk", "uid://ciby424h8ww8a", "uid://radfonor80n6")
 PackedScene=PackedStringArray("uid://bsorlsgev2hqs")
+Texture2D=PackedStringArray("uid://cwdfxxi8u2lyj", "uid://b40n2k385bqmp", "uid://cbhf15355fami")
