--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_closed=[]
 dock_split_2=0
@@ -24,8 +24,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://Scenes/Enemies/Antivirus.tscn")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/UI/", "res://Scenes/", "res://Scenes/Virus/", "res://Scenes/UI/Options/", "res://Scenes/Enemies/", "res://Assets/", "res://Assets/Sprites/", "res://addons/save_and_load/")
+selected_paths=PackedStringArray("res://Scenes/UI/MutationUI.tscn")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/UI/", "res://Scenes/", "res://Scenes/Virus/", "res://Scenes/UI/", "res://Scenes/Enemies/", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/Virus/", "res://addons/save_and_load/")
 
 [docks/History]
 
@@ -34,8 +34,8 @@ include_global=true
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Main/Main.tscn", "res://Scenes/Environment/File.tscn")
-current_scene="res://Scenes/Environment/File.tscn"
+open_scenes=PackedStringArray("res://Scenes/Main/Main.tscn", "res://Scenes/UI/PauseMenu.tscn", "res://Scenes/UI/MutationUI.tscn")
+current_scene="res://Scenes/UI/PauseMenu.tscn"
 bottom_panel_offsets={
 "Animation": 0,
 "Audio": -450,
@@ -43,7 +43,7 @@ bottom_panel_offsets={
 "Output": -270,
 "Shader Editor": 0
 }
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 
 [EditorWindow]
