--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_closed=[]
 dock_split_2=0
@@ -24,8 +24,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://Scenes/UI/MutationUI.tscn")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/UI/", "res://Scenes/", "res://Scenes/Virus/", "res://Scenes/UI/", "res://Scenes/Enemies/", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/Virus/", "res://addons/save_and_load/")
+selected_paths=PackedStringArray("res://Scenes/Shaders/VirusGlowDamageMaterial.tres")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Shaders/", "res://Scenes/Enemies/", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/Virus/", "res://addons/save_and_load/")
 
 [docks/History]
 
@@ -48,15 +48,15 @@ selected_main_editor_idx=0
 
 [EditorWindow]
 
-screen=2
+screen=1
 mode="maximized"
 position=Vector2i(4480, 57)
 size=Vector2i(1152, 648)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://Scripts/Virus/Virus.gd"]
+selected_script="res://Scripts/Virus/Virus.gd"
 open_help=["@GlobalScope", "OS"]
 script_split_offset=200
 list_split_offset=0
