--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -53,3 +53,17 @@ state={
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
+
+[res://Scripts/Virus/Virus.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": PackedInt32Array(),
+"h_scroll_position": 0,
+"row": 106,
+"scroll_position": 106.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
