Add Trail, Health Bar and Glitch Effects

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -8,7 +8,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=280
+dock_hsplit_2=387
 dock_hsplit_3=-522
 dock_hsplit_4=0
 dock_9_selected_tab_idx=0
@@ -24,8 +24,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://Scenes/Shaders/VirusGlowDamageMaterial.tres")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Shaders/", "res://Scenes/Enemies/", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/Virus/", "res://addons/save_and_load/")
+selected_paths=PackedStringArray("res://addons/trail_2d/trail_2d.gd")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/Core/", "res://Scenes/", "res://Scenes/Virus/", "res://Scenes/Enemies/", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/Virus/", "res://Assets/Shaders/", "res://addons/", "res://addons/trail_2d/")
 
 [docks/History]
 
@@ -34,17 +34,17 @@ include_global=true
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Main/Main.tscn", "res://Scenes/UI/PauseMenu.tscn", "res://Scenes/UI/MutationUI.tscn")
-current_scene="res://Scenes/UI/PauseMenu.tscn"
+open_scenes=PackedStringArray("res://Scenes/Main/Main.tscn", "res://Scenes/UI/HUD.tscn")
+current_scene="res://Scenes/UI/HUD.tscn"
 bottom_panel_offsets={
 "Animation": 0,
 "Audio": -450,
 "Debugger": -286,
 "Output": -270,
-"Shader Editor": 0
+"Shader Editor": -462
 }
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=3
 
 [EditorWindow]
 
@@ -55,8 +55,8 @@ size=Vector2i(1152, 648)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Virus/Virus.gd"]
-selected_script="res://Scripts/Virus/Virus.gd"
+open_scripts=["res://Scripts/UI/HUD.gd", "res://Scripts/Virus/Virus.gd"]
+selected_script="res://Scripts/UI/HUD.gd"
 open_help=["@GlobalScope", "OS"]
 script_split_offset=200
 list_split_offset=0
@@ -69,9 +69,9 @@ floating_window_screen=-1
 
 [ShaderEditor]
 
-open_shaders=[]
-split_offset=200
-selected_shader=""
+open_shaders=["res://Assets/Shaders/GlitchShader.gdshader"]
+split_offset=250
+selected_shader="res://Assets/Shaders/GlitchShader.gdshader"
 text_shader_zoom_factor=1.0
 
 [editor_log]
