--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -62,8 +62,22 @@ state={
 "column": 0,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 106,
-"scroll_position": 106.0,
+"row": 61,
+"scroll_position": 61.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/UI/HUD.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": PackedInt32Array(),
+"h_scroll_position": 0,
+"row": 40,
+"scroll_position": 40.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
