--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -24,8 +24,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://addons/trail_2d/trail_2d.gd")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/Core/", "res://Scenes/", "res://Scenes/Virus/", "res://Scenes/Enemies/", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/Virus/", "res://Assets/Shaders/", "res://addons/", "res://addons/trail_2d/")
+selected_paths=PackedStringArray("res://Scenes/UI/Notification.tscn")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/Core/", "res://Scenes/", "res://Scenes/Virus/", "res://Scenes/UI/", "res://Scenes/Enemies/", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/Virus/", "res://Assets/Sprites/UI/", "res://Assets/Shaders/", "res://addons/", "res://addons/trail_2d/")
 
 [docks/History]
 
@@ -34,8 +34,8 @@ include_global=true
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Main/Main.tscn", "res://Scenes/UI/HUD.tscn")
-current_scene="res://Scenes/UI/HUD.tscn"
+open_scenes=PackedStringArray("res://Scenes/Main/Main.tscn")
+current_scene="res://Scenes/Main/Main.tscn"
 bottom_panel_offsets={
 "Animation": 0,
 "Audio": -450,
@@ -43,20 +43,20 @@ bottom_panel_offsets={
 "Output": -270,
 "Shader Editor": -462
 }
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=3
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=0
 
 [EditorWindow]
 
-screen=1
+screen=2
 mode="maximized"
 position=Vector2i(4480, 57)
 size=Vector2i(1152, 648)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/UI/HUD.gd", "res://Scripts/Virus/Virus.gd"]
-selected_script="res://Scripts/UI/HUD.gd"
+open_scripts=["res://Scripts/UI/DebugConsole.gd", "res://Scripts/UI/Notification.gd"]
+selected_script="res://Scripts/UI/DebugConsole.gd"
 open_help=["@GlobalScope", "OS"]
 script_split_offset=200
 list_split_offset=0
