Add Debug Console

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -11,7 +11,6 @@ dock_hsplit_1=0
 dock_hsplit_2=387
 dock_hsplit_3=-522
 dock_hsplit_4=0
-dock_9_selected_tab_idx=0
 dock_3="Scene,Import"
 dock_4="FileSystem,History"
 dock_5="Inspector,Signals,Groups"
@@ -24,8 +23,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://Scenes/UI/Notification.tscn")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/Core/", "res://Scenes/", "res://Scenes/Virus/", "res://Scenes/UI/", "res://Scenes/Enemies/", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/Virus/", "res://Assets/Sprites/UI/", "res://Assets/Shaders/", "res://addons/", "res://addons/trail_2d/")
+selected_paths=PackedStringArray("res://Scenes/Debug/DebugConsole.tscn")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/Core/", "res://Scenes/", "res://Scenes/Virus/", "res://Scenes/Environment/", "res://Scenes/Debug/", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/Virus/", "res://Assets/Sprites/UI/", "res://Assets/Shaders/", "res://addons/", "res://addons/trail_2d/")
 
 [docks/History]
 
@@ -43,20 +42,20 @@ bottom_panel_offsets={
 "Output": -270,
 "Shader Editor": -462
 }
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 
 [EditorWindow]
 
-screen=2
+screen=1
 mode="maximized"
 position=Vector2i(4480, 57)
 size=Vector2i(1152, 648)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/UI/DebugConsole.gd", "res://Scripts/UI/Notification.gd"]
-selected_script="res://Scripts/UI/DebugConsole.gd"
+open_scripts=[]
+selected_script=""
 open_help=["@GlobalScope", "OS"]
 script_split_offset=200
 list_split_offset=0
