--- a/.godot/scene_groups_cache.cfg
+++ b/.godot/scene_groups_cache.cfg
@@ -5,3 +5,11 @@ groups=[&"HotkeyRebindButton"]
 [res://Scenes/Virus/Virus.tscn]
 
 groups=[&"virus", &"virus_infection_zone"]
+
+[res://Scenes/Enemies/Antivirus.tscn]
+
+groups=[&"antivirus"]
+
+[res://Scenes/Environment/Folder.tscn]
+
+groups=[&"infectables"]
