Add OverchargeMutation, RegenerationMutation and BasicEchoMutation

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=2
 dock_floating={}
 dock_closed=[]
 dock_split_2=0
@@ -11,6 +11,7 @@ dock_hsplit_1=0
 dock_hsplit_2=387
 dock_hsplit_3=-522
 dock_hsplit_4=0
+dock_9_selected_tab_idx=0
 dock_3="Scene,Import"
 dock_4="FileSystem,History"
 dock_5="Inspector,Signals,Groups"
@@ -23,8 +24,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://Scenes/Debug/DebugConsole.tscn")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/Core/", "res://Scenes/", "res://Scenes/Virus/", "res://Scenes/Environment/", "res://Scenes/Debug/", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/Virus/", "res://Assets/Sprites/UI/", "res://Assets/Shaders/", "res://addons/", "res://addons/trail_2d/")
+selected_paths=PackedStringArray("res://Mutations/RegenerationMutation.tres")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/Core/", "res://Scenes/", "res://Scenes/Virus/", "res://Mutations/", "res://Assets/Sprites/", "res://Assets/Sprites/Virus/", "res://Assets/Sprites/UI/")
 
 [docks/History]
 
@@ -33,8 +34,8 @@ include_global=true
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Main/Main.tscn")
-current_scene="res://Scenes/Main/Main.tscn"
+open_scenes=PackedStringArray("res://Scenes/Main/Main.tscn", "res://Scenes/Virus/Virus.tscn")
+current_scene="res://Scenes/Virus/Virus.tscn"
 bottom_panel_offsets={
 "Animation": 0,
 "Audio": -450,
@@ -43,7 +44,7 @@ bottom_panel_offsets={
 "Shader Editor": -462
 }
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=3
 
 [EditorWindow]
 
@@ -54,8 +55,8 @@ size=Vector2i(1152, 648)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://Scripts/MutationsAvailable/RegenerationMutation.gd"]
+selected_script="res://Scripts/MutationsAvailable/RegenerationMutation.gd"
 open_help=["@GlobalScope", "OS"]
 script_split_offset=200
 list_split_offset=0
