Add a lot of mutations

--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,6 +1,6 @@
 [selected_history]
 
-Script=PackedStringArray("uid://nsi4ko37i2gm", "uid://not3fy6yn8et", "uid://i72sbaxskxii", "uid://c3ntx28fkvufp", "uid://fqcw2obmxshk", "uid://ciby424h8ww8a", "uid://radfonor80n6")
+Script=PackedStringArray("res://Scripts/Core/PostProcessing.gd", "res://Scripts/UI/PauseMenu.gd", "res://Scripts/UI/OptionsMenu.gd", "res://Scripts/Enemies/AntivirusManager.gd", "res://Scripts/Enemies/Antivirus.gd", "res://Scripts/MutationsAvailable/DiscretionMutuation.gd")
 PackedScene=PackedStringArray("uid://bsorlsgev2hqs")
-Texture2D=PackedStringArray("uid://cwdfxxi8u2lyj", "uid://b40n2k385bqmp", "uid://cbhf15355fami")
+Texture2D=PackedStringArray("uid://c4rn6yaa8hjoc", "uid://cwdfxxi8u2lyj", "uid://b40n2k385bqmp", "uid://cbhf15355fami")
 Shader=PackedStringArray("uid://btceqwgbthq7k")
