--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=2
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_closed=[]
 dock_split_2=0
@@ -24,8 +24,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://Mutations/RegenerationMutation.tres")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/Core/", "res://Scenes/", "res://Scenes/Virus/", "res://Mutations/", "res://Assets/Sprites/", "res://Assets/Sprites/Virus/", "res://Assets/Sprites/UI/")
+selected_paths=PackedStringArray("res://Mutations/SystemHookMutation.tres")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/Core/", "res://Scenes/", "res://Scenes/Virus/", "res://Scenes/UI/", "res://Scenes/Main/", "res://Scenes/Environment/", "res://Mutations/", "res://Assets/Sprites/", "res://Assets/Sprites/Virus/", "res://Assets/Sprites/UI/")
 
 [docks/History]
 
@@ -34,8 +34,8 @@ include_global=true
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Main/Main.tscn", "res://Scenes/Virus/Virus.tscn")
-current_scene="res://Scenes/Virus/Virus.tscn"
+open_scenes=PackedStringArray("res://Scenes/Main/Main.tscn", "res://Scenes/Environment/Folder.tscn")
+current_scene="res://Scenes/Main/Main.tscn"
 bottom_panel_offsets={
 "Animation": 0,
 "Audio": -450,
@@ -43,20 +43,20 @@ bottom_panel_offsets={
 "Output": -270,
 "Shader Editor": -462
 }
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=3
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=0
 
 [EditorWindow]
 
 screen=1
 mode="maximized"
 position=Vector2i(4480, 57)
-size=Vector2i(1152, 648)
+size=Vector2i(1268, 600)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/MutationsAvailable/RegenerationMutation.gd"]
-selected_script="res://Scripts/MutationsAvailable/RegenerationMutation.gd"
+open_scripts=[]
+selected_script=""
 open_help=["@GlobalScope", "OS"]
 script_split_offset=200
 list_split_offset=0
