--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -5,11 +5,11 @@ dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_floating={}
 dock_closed=[]
-dock_split_2=0
+dock_split_2=343
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=387
-dock_hsplit_3=-522
+dock_hsplit_3=-353
 dock_hsplit_4=0
 dock_9_selected_tab_idx=0
 dock_3="Scene,Import"
@@ -24,8 +24,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://Mutations/SystemHookMutation.tres")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/Core/", "res://Scenes/", "res://Scenes/Virus/", "res://Scenes/UI/", "res://Scenes/Main/", "res://Scenes/Environment/", "res://Mutations/", "res://Assets/Sprites/", "res://Assets/Sprites/Virus/", "res://Assets/Sprites/UI/")
+selected_paths=PackedStringArray("res://Assets/Fonts/font titles/Cyber Alert.otf")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/test/", "res://Scenes/", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/Virus/", "res://Assets/Sprites/UI/", "res://Assets/Fonts/", "res://Assets/Fonts/font titles/", "res://Assets/Fonts/font text/")
 
 [docks/History]
 
@@ -34,29 +34,29 @@ include_global=true
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Main/Main.tscn", "res://Scenes/Environment/Folder.tscn")
-current_scene="res://Scenes/Main/Main.tscn"
+open_scenes=PackedStringArray("res://Scenes/UI/StartMenu.tscn", "res://Scripts/test/HUD.tscn", "res://Scripts/test/MutationUI.tscn")
+current_scene="res://Scripts/test/MutationUI.tscn"
 bottom_panel_offsets={
 "Animation": 0,
 "Audio": -450,
-"Debugger": -286,
+"Debugger": -493,
 "Output": -270,
 "Shader Editor": -462
 }
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 
 [EditorWindow]
 
-screen=1
+screen=2
 mode="maximized"
 position=Vector2i(4480, 57)
 size=Vector2i(1268, 600)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://Scripts/Core/GameManager.gd", "res://Scripts/Environment/Infectable.gd", "res://Scripts/Mutations/MutationManager.gd", "res://Scripts/UI/MutationUI.gd", "res://Assets/Fonts/font text/Readme (DEMO).txt", "res://Scripts/Virus/Virus.gd"]
+selected_script="res://Scripts/UI/MutationUI.gd"
 open_help=["@GlobalScope", "OS"]
 script_split_offset=200
 list_split_offset=0
