Boost AI and Options Menu UI updated

--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,6 +1,7 @@
 [selected_history]
 
-Script=PackedStringArray("res://Scripts/Core/PostProcessing.gd", "res://Scripts/UI/PauseMenu.gd", "res://Scripts/UI/OptionsMenu.gd", "res://Scripts/Enemies/AntivirusManager.gd", "res://Scripts/Enemies/Antivirus.gd", "res://Scripts/MutationsAvailable/DiscretionMutuation.gd")
+Script=PackedStringArray("uid://b3copx7j1ylbd", "uid://c3ntx28fkvufp", "uid://not3fy6yn8et", "uid://i72sbaxskxii", "uid://fqcw2obmxshk", "uid://ciby424h8ww8a", "uid://radfonor80n6")
 PackedScene=PackedStringArray("uid://bsorlsgev2hqs")
 Texture2D=PackedStringArray("uid://c4rn6yaa8hjoc", "uid://cwdfxxi8u2lyj", "uid://b40n2k385bqmp", "uid://cbhf15355fami")
 Shader=PackedStringArray("uid://btceqwgbthq7k")
+Font=PackedStringArray("uid://du1x2p3jh7pht")
