--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -367,6 +367,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/Mutations/Mutation.gd"
 }, {
+"base": &"StaticBody2D",
+"class": &"Firewall",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Enemies/Firewall.gd"
+}, {
 "base": &"Control",
 "class": &"HotkeyRebindButton",
 "icon": "",
