--- a/.godot/scene_groups_cache.cfg
+++ b/.godot/scene_groups_cache.cfg
@@ -1,11 +1,3 @@
-[res://Scenes/UI/Options/HotkeyRebindButton.tscn]
-
-groups=[&"HotkeyRebindButton"]
-
-[res://Scenes/Enemies/Antivirus.tscn]
-
-groups=[&"antivirus"]
-
 [res://Scenes/Environment/Folder.tscn]
 
 groups=[&"infectables"]
@@ -13,3 +5,15 @@ groups=[&"infectables"]
 [res://Scenes/Virus/Virus.tscn]
 
 groups=[&"virus", &"virus_infection_zone"]
+
+[res://Scenes/Enemies/Firewall.tscn]
+
+groups=[&"firewall"]
+
+[res://Scenes/Enemies/ScanZone.tscn]
+
+groups=[&"scan_zone"]
+
+[res://Scenes/Enemies/Antivirus.tscn]
+
+groups=[&"antivirus"]
