--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -5,11 +5,11 @@ dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_floating={}
 dock_closed=[]
-dock_split_2=343
+dock_split_2=81
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=387
-dock_hsplit_3=-353
+dock_hsplit_3=-351
 dock_hsplit_4=0
 dock_9_selected_tab_idx=0
 dock_3="Scene,Import"
@@ -25,7 +25,7 @@ display_mode=0
 file_sort=0
 file_list_display_mode=1
 selected_paths=PackedStringArray("res://Assets/Fonts/font titles/Cyber Alert.otf")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/test/", "res://Scenes/", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/Virus/", "res://Assets/Sprites/UI/", "res://Assets/Fonts/", "res://Assets/Fonts/font titles/", "res://Assets/Fonts/font text/")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/UI/", "res://Scenes/Environment/", "res://Scenes/Debug/", "res://Assets/", "res://Assets/Sprites/Virus/", "res://Assets/Sprites/UI/", "res://Assets/Fonts/", "res://Assets/Fonts/font titles/", "res://Assets/Fonts/font text/")
 
 [docks/History]
 
@@ -34,8 +34,8 @@ include_global=true
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/UI/StartMenu.tscn", "res://Scripts/test/HUD.tscn", "res://Scripts/test/MutationUI.tscn")
-current_scene="res://Scripts/test/MutationUI.tscn"
+open_scenes=PackedStringArray("res://Scenes/Enemies/ScanZone.tscn", "res://Scenes/UI/OptionsMenu.tscn")
+current_scene="res://Scenes/UI/OptionsMenu.tscn"
 bottom_panel_offsets={
 "Animation": 0,
 "Audio": -450,
@@ -43,20 +43,20 @@ bottom_panel_offsets={
 "Output": -270,
 "Shader Editor": -462
 }
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
 
 [EditorWindow]
 
-screen=2
+screen=1
 mode="maximized"
 position=Vector2i(4480, 57)
 size=Vector2i(1268, 600)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Core/GameManager.gd", "res://Scripts/Environment/Infectable.gd", "res://Scripts/Mutations/MutationManager.gd", "res://Scripts/UI/MutationUI.gd", "res://Assets/Fonts/font text/Readme (DEMO).txt", "res://Scripts/Virus/Virus.gd"]
-selected_script="res://Scripts/UI/MutationUI.gd"
+open_scripts=["res://Scripts/UI/HotkeyRebindButton.gd", "res://INTEGRATION_GUIDE.md", "res://Scripts/UI/OptionsMenu.gd", "res://Assets/Fonts/font text/Readme (DEMO).txt", "res://Scripts/UI/StartMenu.gd"]
+selected_script="res://Scripts/UI/OptionsMenu.gd"
 open_help=["@GlobalScope", "OS"]
 script_split_offset=200
 list_split_offset=0
