--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -6,8 +6,8 @@ state={
 "column": 0,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 38,
-"scroll_position": 38.0,
+"row": 60,
+"scroll_position": 60.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 1,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 28,
-"scroll_position": 28.0,
+"row": 112,
+"scroll_position": 112.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -48,8 +48,8 @@ state={
 "column": 0,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 100,
-"scroll_position": 100.0,
+"row": 23,
+"scroll_position": 23.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -76,8 +76,8 @@ state={
 "column": 0,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 40,
-"scroll_position": 40.0,
+"row": 69,
+"scroll_position": 69.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -202,8 +202,8 @@ state={
 "column": 0,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 47,
-"scroll_position": 47.0,
+"row": 58,
+"scroll_position": 58.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -218,6 +218,34 @@ state={
 "h_scroll_position": 0,
 "row": 114,
 "scroll_position": 114.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://INTEGRATION_GUIDE.md]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": PackedInt32Array(),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Markdown"
+}
+
+[res://Scripts/Enemies/ScanZone.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": PackedInt32Array(),
+"h_scroll_position": 0,
+"row": 152,
+"scroll_position": 152.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
